--- a/css/waamistyle.css
+++ b/css/waamistyle.css
@@ -25,3 +25,22 @@ ol {
 html {
     padding : 25px;
 } 
+
+table.tableizer-table {
+	    font-size: 16px;
+	    margin-left: auto;
+  		margin-right: auto;
+        border: 1px solid #CCC; 
+    } 
+    .tableizer-table td {
+        padding: 10px;
+        margin: 10px;
+        text-align: left;
+        border: 1px solid #CCC;
+    }
+    .tableizer-table th {
+        padding: 10px;
+        margin: 10px;
+        text-align: center;
+        font-weight: bold;
+    }
