--- a/css/waamistyle.css
+++ b/css/waamistyle.css
@@ -27,7 +27,7 @@ html {
 } 
 
 table.tableizer-table {
-	    font-size: 16px;
+	    font-size: 14px;
 	    margin-left: auto;
   		margin-right: auto;
         border: 1px solid #CCC; 
@@ -43,4 +43,12 @@ table.tableizer-table {
         margin: 10px;
         text-align: center;
         font-weight: bold;
+    }
+
+    .tableizer-table td.secondrow {
+        padding: 10px;
+        margin: 10px;
+        text-align: center;
+        font-weight: bold;
+        border: 1px solid #CCC;
     }
